# jm-face-gestures

./: .editorconfig  .flake8  README.md  __init__.py  diagnose_livelink.py  jm_eyebrow_scroll.py  manual_hires_scroll_probe.py  paced_scroller.py  platform_scroller.py  pyproject.toml  requirements.txt  run_eyebrow_scroll.bat  run_eyebrow_scroll.sh  run_face_gestures.bat  run_face_gestures.sh  scroll_core.py  scroll_pacer.py  scroll_runtime.py  uinput_hires_scroller.py  xtest_wheel_pacer.py
face_gestures/: __init__.py  cli.py  control.py  driver.py  output.py  pacing.py  scroll.py  signals.py  source.py
tests/: test_app_config.py  test_backend_selection.py  test_cli_output.py  test_pacing.py  test_scroll.py  test_scroll_core.py  test_signals.py
